--- a/film/index.html
+++ b/film/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>VMFive Frontend Assignment</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="./style.css">
         <style>
             body {
                 font-family: sans-serif;
@@ -87,5 +88,7 @@
             <hr />
             <p>文章來源：<a href="https://money.udn.com/money/story/11150/2478372">經濟日報</a></p>
         </div>
+
+        <script src="spining.js"></script>
     </body>
 </html>
