--- a/film/index.html
+++ b/film/index.html
@@ -87,8 +87,13 @@
             <p>丁俊宏設定三年內在亞太地區互動遊戲廣告市場闖出一片天，他對自家的技術相當有信心，現階段目標是讓VMFive把市場做大、做好，並希望這家公司可以永續經營。</p>
             <hr />
             <p>文章來源：<a href="https://money.udn.com/money/story/11150/2478372">經濟日報</a></p>
+        </div>        
+        <div class="film-container">
+            <div class="slider-container"></div>
+            <div class="close" onclick="closeButton()">
+                <img src="./images/close.png" alt="close-button">
+            </div>
         </div>
-
-        <script src="spining.js"></script>
     </body>
+    <script src="film.js"></script>
 </html>
