--- a/spinning/index.html
+++ b/spinning/index.html
@@ -88,7 +88,22 @@
             <hr />
             <p>文章來源：<a href="https://money.udn.com/money/story/11150/2478372">經濟日報</a></p>
         </div>
-
-        <script src="spining.js"></script>
+        <div class="film-container">
+            <div class="hand">
+                <img src="./images/hand.png" alt="" />
+            </div>
+            <div class="slider-container" onclick="showLightBox()">
+            </div>
+            <div class="close" onclick="closeButton()">
+                <img src="./images/close.png" alt="close-button">
+            </div>
+        </div>
+        <div class="light-box">
+        </div>
+        <div class="close box-close" onclick="closelightBox()" >
+            <img src="./images/close.png" alt="close-button">
+        </div>
     </body>
+    <script src="spinning.js"></script>
+
 </html>
